Decorate with bean.

--- a/App2/build.gradle
+++ b/App2/build.gradle
@@ -1,4 +1,5 @@
 dependencies {
     implementation project(":App")
     implementation project(":common")
+    implementation project(":BeanConflictResolve")
 }
