--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'spring-gradle-multi-module-annotation'
 include 'App'
 include 'App2'
 include 'common'
+include 'BeanConflictResolve'
 
