--- a/App2/build.gradle
+++ b/App2/build.gradle
@@ -2,4 +2,5 @@ dependencies {
     implementation project(":App")
     implementation project(":common")
     implementation project(":BeanConflictResolve")
+    implementation project(":module1")
 }
