--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,7 @@ include 'App'
 include 'App2'
 include 'common'
 include 'BeanConflictResolve'
+include 'module1'
+include 'module2'
+include 'module3'
 
