--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,11 @@ allprojects {
 
     dependencies {
             implementation 'javax.inject:javax.inject:1'
+            implementation 'javax.annotation:javax.annotation-api:1.3.2'
             implementation 'org.springframework:spring-core:3.0.5.RELEASE'
             implementation 'org.springframework:spring-context:3.0.5.RELEASE'
+
+
             testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
             testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     }
